stylesheet.less
/* ... */
.svg .page-wrap .widget.paypalbuynow .widget.button.paypal {
	background-image: image('/images/social/socialicons-paypal.svg')
}
.svg .page-wrap .widget.tweet a {
	background-image: image('/images/social/socialicons-twitter.svg')
}
.svg .page-wrap .widget.dropbox button {
	background-image: image('/images/social/socialicons-dropbox.svg')
}
	
/* PNG Icons */
.page-wrap {	
	.widget.socialicons span.bk-socialicons-twitter a,
	.widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a {
		background-image: image('/images/social/socialicons-twitter.png');
	}
	
	.widget.socialicons span.bk-socialicons-linkedin a,
	.widget.profile .bk-profile-socialicons span.bk-socialicons-linkedin a {
		background-image: image('/images/social/socialicons-linkedin.png')
	}
	
	.widget.socialicons span.bk-socialicons-facebook a,
	.widget.profile .bk-profile-socialicons span.bk-socialicons-facebook a {
		background-image: image('/images/social/socialicons-facebook.png')
	}
	
	.widget.socialicons span.bk-socialicons-rss a,
	.widget.profile .bk-profile-socialicons span.bk-socialicons-rss a {
		background-image: image('/images/social/socialicons-rss.png')
	}
	
	.widget.socialicons span.bk-socialicons-googleplus a,
	.widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a {
		background-image: image('/images/social/socialicons-googleplus.png')
	}
	
	.widget.socialicons span.bk-socialicons-youtube a,
	.widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
		background-image: image('/images/social/socialicons-youtube.png')
	}
	
	.widget.paypalbuynow .widget.button.paypal {
		background-image: image('/images/social/socialicons-paypal.png')
	}
	.widget.tweet a {
		background-image: image('/images/social/socialicons-twitter.png')
	}
	.widget.dropbox button {
		background-image: image('/images/social/socialicons-dropbox.png')
	}

}

.twitter ul li time {
	color: lighten(@font-swatch5-color, 20%);
}


// 12. Responsive
@media @tablet {
	.header-feature,
	.home .header-feature,
	.footer-feature {
		.logo img {
			max-width: 120px;
		}
	}
	.widget.feature .feature-bgimg .content {
		h2 {
			font-size: bkscale(@font-swatch8-font-size, 0.5);
			line-height: bkscale(@font-swatch8-line-height, 0.5);
		}
		h3 {
			font-size: bkscale(@font-swatch9-font-size, 0.9);
			line-height: bkscale(@font-swatch9-line-height, 0.5);
			border-top: none;
		}
	}
	.widget.feature .feature-bgimg .content h3 {
		padding-top: 5px;
	}
	.template-header .template-aside {
		display: none;
	}
	.widget.logo {
		float: none;
		width: auto;
	}
	.widget.blogsearch {
		width: 100%;
		padding: 0 20px;
	}
	.widget.profile form fieldset input,
	.signupform fieldset input,
	input[type=search] {
		width: 100%;
		margin-bottom: 5px;
	}
	.blog-post-feature-image-wrap {
		width: 100%;
	}
	.template-footer {
		padding-bottom: 40px;
		float: left;
		.template-aside {
			width: 100%;
			padding: 20px 0 0 0;
		}
	}
	.widget .extendednavigation {
		border-bottom: none;
	}
	.widget .extendednavigation ul li,
	.widget .extendednavigation ul.align-left li {
		padding: 0;
		border-bottom: 1px solid darken(@color-swatch1, 15%);
	}
	.widget .extendednavigation ul li.folder:hover ul {
		left: 0;
		top: 49px;
	}
	.widget .extendednavigation ul li.folder {
		margin-right: 0;
	}
	.template-nav {
		float: none;
		width: auto;
	}
	.main-wrap {
		width: 100%;
	}
	.widget .extendednavigation ul li.folder:hover ul {
		margin: 1px 0 0;
		border: none;
	}
	.widget .extendednavigation ul li a,
	.widget .extendednavigation ul li > .text,
	.widget .extendednavigation ul li.folder:hover a {
		padding: 10px 0;
	}
	.widget.responsiveslideshow .description {
		display: inline-block;
	}
	.menu .main, .main {
		padding: 0 20px;
	}
}

@media (max-width: 700px) {
	body {
		background-size: cover;
	}
	.template-header {
		position: relative;
		height: auto;
		float: none;
		width: auto;
		#straplinewidget {
			display: none;
		}
	}
	.page-wrap {
		width: 100%;
		margin-left: 0;
	}
	.blog-post-list {
		.blog-post-feature-image-wrap {
			position: relative;
			margin: 0;
			height: 200px;
			width: 100%;
			float: none;
			margin-bottom: 10px;
			&:after {
				display: none;
			}
		}
		.blog-post-item > * {
			margin-right: 0;
			max-width: 100%;
		}
	}
	.blogpost-page .blog-post-feature-image-wrap {
		height: 250px;
	}
	.template-footer {
		padding: 30px 20px 40px;
	}
}

